--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="Vendors/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="Vendors/css/Grid.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,900;1,300;1,700&display=swap" rel="stylesheet">
     <title>Omnifood</title>
 </head>
 <body>
-    <h1>Omnifood</h1>    
+    <header>
+        <div class="hero-text-box">
+            <h1>Goodbye junk food.<br>Hello super healthy meals.</h1>
+            <a class="btn btn-full" href="#">I’m hungry</a>
+            <a class="btn btn-ghost" href="#">Show me more</a>
+        </div>
+    </header>
 </body>
 </html>
