--- a/index.html
+++ b/index.html
@@ -147,9 +147,110 @@
             <a href="#" class="btn-app"> <img src="img/download-app-android.png" alt="Play store button"></a> 
      </div>
     </section>
+
+
+    <section class="section-cities">
+        <div class="row">
+            <h2>We're currently in these cities</h2>
+        </div>
+                <div class="row">
+                     <div class="col span-1-of-4 box">
+                         <img src="img/lisbon-3.jpg" alt="Lisbon">
+                         <h3>Lisbon</h3>
+                            <div class="city-feature">
+                                <ion-icon class="icon-small" name="person"></ion-icon>
+                                1600+ happy eaters
+                            </div>
+                            <div class="city-feature">
+                                <ion-icon class="icon-small" name="star"></ion-icon>
+                                60+ top chefs
+                            </div>
+                            <div class="city-feature">
+                                <ion-icon class="icon-small" name="logo-twitter"></ion-icon>
+                                <a href="#">@omnifood_lx</a>
+                            </div>
+                     </div>
+
+                     <div class="col span-1-of-4 box">
+                        <img src="img/san-francisco.jpg" alt="San Francisco">
+                        <h3>San Francisco</h3>
+                           <div class="city-feature">
+                               <ion-icon class="icon-small" name="person"></ion-icon>
+                               3700+ happy eaters
+                           </div>
+                           <div class="city-feature">
+                               <ion-icon class="icon-small" name="star"></ion-icon>
+                               160+ top chefs
+                           </div>
+                           <div class="city-feature">
+                               <ion-icon class="icon-small" name="logo-twitter"></ion-icon>
+                               <a href="#">@omnifood_sf</a>
+                           </div>
+                    </div>
+
+                    <div class="col span-1-of-4 box">
+                        <img src="img/berlin.jpg" alt="Berlin">
+                        <h3>Berlin</h3>
+                           <div class="city-feature">
+                               <ion-icon class="icon-small" name="person"></ion-icon>
+                               2300+ happy eaters
+                           </div>
+                           <div class="city-feature">
+                               <ion-icon class="icon-small" name="star"></ion-icon>
+                               110+ top chefs
+                           </div>
+                           <div class="city-feature">
+                               <ion-icon class="icon-small" name="logo-twitter"></ion-icon>
+                               <a href="#">@omnifood_berlin</a>
+                           </div>
+                    </div>
+
+                    <div class="col span-1-of-4 box">
+                        <img src="img/london.jpg" alt="London">
+                        <h3>London</h3>
+                           <div class="city-feature">
+                               <ion-icon class="icon-small" name="person"></ion-icon>
+                               1200+ happy eaters
+                           </div>
+                           <div class="city-feature">
+                               <ion-icon class="icon-small" name="star"></ion-icon>
+                               50+ top chefs
+                           </div>
+                           <div class="city-feature">
+                               <ion-icon class="icon-small" name="logo-twitter"></ion-icon>
+                               <a href="#">@omnifood_london</a>
+                           </div>
+                    </div>
+                </div>
+    </section>
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 </body>
 </html>
+
+
+
+<!---: We're currently in these cities
+
+Lisbon
+1600+ happy eaters
+60+ top chefs
+@omnifood_lx
+
+San Francisco
+3700+ happy eaters
+160+ top chefs
+@omnifood_sf
+
+Berlin
+2300+ happy eaters
+110+ top chefs
+@omnifood_berlin
+
+London
+1200+ happy eaters
+50+ top chefs
+@omnifood_london
+-->
 
 
 
