--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
                     <div>3</div>
                     <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
                 </div>
-            </div>
 
-            <a href="#" class="btn-app"> <img src="img/download-app.svg" alt="app-store-btn"></a>
-            <a href="#" class="btn-app"> <img src="img/download-app-android.png" alt="Play store button"></a> 
+                <a href="#" class="btn-app"> <img src="img/download-app.svg" alt="app-store-btn"></a>
+                <a href="#" class="btn-app"> <img src="img/download-app-android.png" alt="Play store button"></a> 
+            </div>
      </div>
     </section>
 
@@ -223,37 +223,106 @@
                     </div>
                 </div>
     </section>
+
+    <section class="customer-testimonials">
+        <div class="row">
+            <h2>Our customers can't live without us</h2>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-3">
+                <blockquote>
+                    Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+                    <cite> <img src="img/customer-1.jpg"> Alberto Duncan</cite>
+                </blockquote>
+            </div>
+
+            <div class="col span-1-of-3">
+                <blockquote>
+                    Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!
+                    <cite> <img src="img/customer-2.jpg"> Joana Silva</cite>
+                </blockquote>
+            </div>
+
+            <div class="col span-1-of-3">
+                <blockquote>
+                    I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
+                    <cite> <img src="img/customer-3.jpg">Milton Chapman</cite>
+                </blockquote>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-plans">
+        <div class="row">
+            <h2>Start eating healthy today</h2>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-3">
+                <div class="plan-box">
+                    <div>
+                        <h3>Premium</h3>
+                        <p class="plan-price">$399 per month</p>
+                        <p class="plan-price-meal">That’s only 13.30$ per meal</p>
+                    </div>
+                    <div>
+                        <ul>
+                            <li><ion-icon name="checkmark-outline"></ion-icon>1 meal every day</li>
+                            <li><ion-icon name="checkmark-outline"></ion-icon>Order 24/7</li>
+                            <li><ion-icon name="checkmark-outline"></ion-icon>Access to newest creations</li>
+                            <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a href="#" class="btn btn-full">sign up now</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col span-1-of-3">
+                <div class="plan-box">
+                    <div>
+                        <h3>Pro</h3>
+                        <p class="plan-price">$149 per month</p>
+                        <p class="plan-price-meal">That’s only 14.90$ per meal</p>
+                    </div>
+                    <div>
+                        <ul>
+                            <li><ion-icon name="checkmark-outline"></ion-icon>1 meal 10 days/month</li>
+                            <li><ion-icon name="checkmark-outline"></ion-icon>Order 24/7</li>
+                            <li><ion-icon name="checkmark-outline"></ion-icon>Access to newest creations</li>
+                            <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a href="#" class="btn btn-ghost">sign up now</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col span-1-of-3">
+                <div class="plan-box">
+                    <div>
+                        <h3>Starter</h3>
+                        <p class="plan-price">19$ per meal</p>
+                        <p class="plan-price-meal"></p>
+                    </div>
+                    <div>
+                        <ul>
+                            <li><ion-icon name="checkmark-outline"></ion-icon>1 meal</li>
+                            <li><ion-icon name="checkmark-outline"></ion-icon>Order from 8 am to 12 pm</li>
+                            <li><ion-icon name="close-outline"></ion-icon></li>
+                            <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a href="#" class="btn btn-ghost">sign up now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 </body>
 </html>
-
-
-
-<!---: We're currently in these cities
-
-Lisbon
-1600+ happy eaters
-60+ top chefs
-@omnifood_lx
-
-San Francisco
-3700+ happy eaters
-160+ top chefs
-@omnifood_sf
-
-Berlin
-2300+ happy eaters
-110+ top chefs
-@omnifood_berlin
-
-London
-1200+ happy eaters
-50+ top chefs
-@omnifood_london
--->
-
-
-
-
 
 
