--- a/index.html
+++ b/index.html
@@ -261,15 +261,15 @@
                 <div class="plan-box">
                     <div>
                         <h3>Premium</h3>
-                        <p class="plan-price">$399 per month</p>
+                        <p class="plan-price">$399 <span>/ month</span></p>
                         <p class="plan-price-meal">That’s only 13.30$ per meal</p>
                     </div>
                     <div>
                         <ul>
-                            <li><ion-icon name="checkmark-outline"></ion-icon>1 meal every day</li>
-                            <li><ion-icon name="checkmark-outline"></ion-icon>Order 24/7</li>
-                            <li><ion-icon name="checkmark-outline"></ion-icon>Access to newest creations</li>
-                            <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+                            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>1 meal every day</li>
+                            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Order 24/7</li>
+                            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Access to newest creations</li>
+                            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Free delivery</li>
                         </ul>
                     </div>
                     <div>
@@ -282,15 +282,15 @@
                 <div class="plan-box">
                     <div>
                         <h3>Pro</h3>
-                        <p class="plan-price">$149 per month</p>
+                        <p class="plan-price">$149 <span>/ month</span></p>
                         <p class="plan-price-meal">That’s only 14.90$ per meal</p>
                     </div>
                     <div>
                         <ul>
-                            <li><ion-icon name="checkmark-outline"></ion-icon>1 meal 10 days/month</li>
-                            <li><ion-icon name="checkmark-outline"></ion-icon>Order 24/7</li>
-                            <li><ion-icon name="checkmark-outline"></ion-icon>Access to newest creations</li>
-                            <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+                            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>1 meal 10 days/month</li>
+                            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Order 24/7</li>
+                            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Access to newest creations</li>
+                            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Free delivery</li>
                         </ul>
                     </div>
                     <div>
@@ -303,15 +303,15 @@
                 <div class="plan-box">
                     <div>
                         <h3>Starter</h3>
-                        <p class="plan-price">19$ per meal</p>
-                        <p class="plan-price-meal"></p>
+                        <p class="plan-price">19$<span>/ meal</span></p>
+                        <p class="plan-price-meal">&nbsp;</p>
                     </div>
                     <div>
                         <ul>
-                            <li><ion-icon name="checkmark-outline"></ion-icon>1 meal</li>
-                            <li><ion-icon name="checkmark-outline"></ion-icon>Order from 8 am to 12 pm</li>
-                            <li><ion-icon name="close-outline"></ion-icon></li>
-                            <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+                            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>1 meal</li>
+                            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Order from 8 am to 12 pm</li>
+                            <li><ion-icon class="icon-small" name="close-outline"></ion-icon></li>
+                            <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Free delivery</li>
                         </ul>
                     </div>
                     <div>
