Added Media Query for three screen sizes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="Vendors/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="Vendors/css/Grid.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/queries.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,900;1,300;1,700&display=swap" rel="stylesheet">
     <title>Omnifood</title>
 </head>
